# vogl

./: .gitignore  CMakeLists.txt  README.md  st.bat
building/: build.bat  how_to_use.txt  if_not_build.bat  if_you_ended.bat
example/: CMakeLists.txt  main.cpp
libs/sh_game/: CMakeLists.txt  sh_game.cpp  sh_game.hpp
libs/sh_key/: CMakeLists.txt  sh_key.hpp  sh_key_lib_win.cpp
libs/sh_ogl/: CMakeLists.txt  abstract_ogl.hpp  ogl.hpp  ppl_shad.cpp  ppl_shad.hpp  sh_ogl.hpp  ubo.hpp  win_ogl.cpp  win_ogl.hpp
libs/sh_ogl/glad46/: CMakeLists.txt
libs/sh_ogl/glad46/include/glad/: glad.h
libs/sh_ogl/glad46/src/: glad.c
libs/sh_vogl/: CMakeLists.txt  mat3x3.h  vogl.cpp  vogl.hpp
libs/sh_vogl/math/: R3_actions.hpp  mat3.hpp  vec3.hpp
libs/sh_vogl/shaders/: big_var.frag.glsl  big_var.geom.glsl  big_var.vert.glsl  shaders.in.hpp
libs/sh_vogl/var/: var.cpp  var.hpp
libs/sh_vogl/var/big_var/: big_var_renderer.cpp  big_var_renderer.hpp
